--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                             <div class="text-lg">AI-Driven Trade Strategies</div>
                         </div>
                     </div><a href="/purchase" class="button-large w-inline-block">
-                        <div>Purchase - $20 USD/m</div>
+                        <div>Purchase - $60 USD/m</div>
                     </a>
                 </div>
                 <div data-w-id="da90dda5-9e48-67c1-8fb0-6d3f2d346292" class="features-2-image-wrap desktop-only"><img
@@ -643,7 +643,7 @@
                         </div>
                         <div class="faq-answer">
                             <p class="text-default pb-32">In total, there are 6 crypto analysts sending out frequent
-                                signals and 2 sports betting analysts. All of these analysts are full-time with tracked
+                                signals. All of these analysts are full-time with tracked
                                 results.</p>
                         </div>
                     </div>
