--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                                 loading="lazy" alt="" / alt="670e36f7e36775d55f6a3617 tick circle">
                             <div class="text-lg">AI-Driven Trade Strategies</div>
                         </div>
-                    </div><a href="/purchase" class="button-large w-inline-block">
+                    </div><a href="https://discord.gg/yy87JrmqDJ" class="button-large w-inline-block">
                         <div>Purchase - $60 USD/m</div>
                     </a>
                 </div>
@@ -689,7 +689,7 @@
     </section>
     <section class="footer">
         <section class="cta-section">
-            <div class="container">
+            <a href="https://discord.gg/yy87JrmqDJ"><div class="container">
                 <div data-w-id="55301db8-1d54-8179-2dda-c06574f8b11e" class="cta-block">
                     <div class="cta-heading-wrapper">
                         <div data-w-id="55301db8-1d54-8179-2dda-c06574f8b120" class="color-linear">
@@ -701,7 +701,7 @@
                         </div>
                     </div>
 
-                </div>
+                </div></a>
             </div>
         </section>
         <div class="container">
